fix(core): Make div container invisible for embedding  videos. (#2470)

--- a/assets/styles/docs.scss
+++ b/assets/styles/docs.scss
@@ -214,30 +214,33 @@ $bd-gutter-x: 3rem;
 
     .video-container {
         position: relative;
-        padding-top: 35.25%;
-        background-color: $black-2;
-        height: 28.351rem;
+        width: 100%;
+        padding-bottom: 56.25%;
+        height: 0;
         border-radius: calc($spacer / 2);
         border: 1px solid $black-3;
-        @media only screen and (max-width: 1919px) {
-            padding-top: 56.25%;
-            height: auto;
-            background-color: transparent;
-        }
+        background-color: $black-2;
+        overflow: hidden;
 
         iframe {
-            margin: auto;
-            max-width: 43.7rem;
-            max-height: 24.351rem;
             position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             width: 100%;
             height: 100%;
+            object-fit: contain;
+            margin: 0;
         }
 
+        @media only screen and (max-width: 768px) {
+            padding-bottom: 56.25%;
+            
+            iframe {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     img:not(h2 img) {
